--- a/01-starting-project/src/components/Header/Header.css
+++ b/01-starting-project/src/components/Header/Header.css
@@ -1,3 +1,5 @@
+/* This doesnt mean this css only applies to header components,
+this will still apply to any <header> in App component */
 header {
     text-align: center;
     margin: 3rem 0;
